--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>网易云音乐WebApp</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="overflow: hidden;">
+    <div id="root">
+      <div style="height: 100vh;width: 100vw;display: flex;justify-content: center;align-items: center;font-size: 1.5rem;">Loading....</div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
