--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>网易云音乐WebApp</title>
-  </head>
-  <body style="overflow: hidden;">
-    <div id="root">
-      <div style="height: 100vh;width: 100vw;display: flex;justify-content: center;align-items: center;font-size: 1.5rem;">Loading....</div>
-    </div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/src/favicon.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>网易云音乐WebApp</title>
+</head>
+
+<body style="overflow: hidden;">
+  <div id="root">
+    <div
+      style="height: 100vh;width: 100vw;display: flex;justify-content: center;align-items: center;font-size: 1.5rem;font-weight: bold;">
+      Loading....</div>
+  </div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
